add logo and lang

--- a/data/blog/simple-html-tags.mdx
+++ b/data/blog/simple-html-tags.mdx
@@ -1,7 +1,7 @@
 ---
 title: ស្លាក HTML សាមញ្ញ
 date: '2022-08-03'
-tags: ['html', 'front-end', 'images']
+tags: ['html', 'front-end']
 draft: false
 summary: មានស្លាកជាច្រើនដែលមាននៅក្នុង HTML ។ នៅទីនេះអ្នកនឹងរៀនអំពីស្លាកទូទៅដែលអ្នកនឹងប្រើជាអ្នកអភិវឌ្ឍន៍។
 ---
